# lang-chain-demo

./: .gitignore  README.md  demo_stock.py  demo_stock_sentiment.py  main.py  pyproject.toml  setting.py  stock_report.py  ta_lib-0.6.4-cp312-cp312-win_amd64.whl
.trae/rules/: project_rules.md
demo/: A股股票列表.csv  demo_get_stock_info.py  demo_stock.py  demo_stock_info.py  demo_tools.py  demo_web_search.py  setting.py  stock_report.py  stock_tools.py
graph_demo/: SCHEDULER_README.md  database.py  init_db.py  llm_init.py  llm_step_init.py  models.py  schedule_task.py  start_scheduler.bat  start_scheduler_fixed.bat
llm_stock/: llm_stock_history.py  web_search.py
stock_trade/: demo_stock.py  demo_stock_sentiment.py  stock_report.py  stock_route.py
web/: .gitignore  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/components/: AnalysisResults.tsx  Sidebar.css  Sidebar.tsx
