[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare",
    "pandas",
    "ta-lib",
    "langchain",
    "langchain_openai",
    "langchain_core",
    "sqlalchemy",
    "mysql-connector-python",
    "fastapi",
    "uvicorn",
]
