[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "akshare==1.17.28",
    "pandas==2.3.1",
    "ta-lib",
    "langchain==0.3.27",
    "langchain-openai==0.3.28",
    "langchain-core==0.3.74",
    "sqlalchemy==2.0.43",
    "mysql-connector-python==9.4.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "dataclasses-json==0.6.7",
    "ddgs==9.5.2",
    "decorator==5.2.1",
    "distro==1.9.0",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpath==0.82.2",
    "jsonpointer==3.0.0",
    "langchain-community==0.3.27",
    "langchain-text-splitters==0.3.9",
    "langgraph==0.6.5",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.0",
    "langsmith==0.4.14",
    "lxml==6.0.0",
    "marshmallow==3.26.1",
    "matplotlib-inline==0.1.7",
    "mini-racer==0.12.4",
    "multidict==6.6.4",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "numpy==2.3.2",
    "openai==1.99.1",
    "openpyxl==3.1.5",
    "orjson==3.11.2",
    "ormsgpack==1.10.0",
    "outcome==1.3.0.post0",
    "packaging==25.0",
    "parso==0.8.4",
    "primp==0.15.0",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2025.7.34",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "selenium==4.34.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "starlette==0.47.2",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "tiktoken==0.10.0",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "trio==0.30.0",
    "trio-websocket==0.12.2",
    "typing-extensions==4.14.1",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webdriver-manager==4.0.2",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wsproto==1.2.0",
    "xlrd==2.0.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0",
    "pandas-stubs==2.2.2.240805",
]

[tool.uv.sources]
ta-lib = { path = "ta_lib-0.6.4-cp312-cp312-win_amd64.whl" }
